<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email_label">Email Address</string>
    <string name="password_label">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_text">Welcome to ShoeStore - a world class inventory management system</string>
    <string name="welcome_advance">The next screen will explain how to use this exciting new application.</string>
    <string name="btn_advance">Advance</string>
    <string name="instructions_title">Instructions</string>
    <string name="btn_manage_inventory">Manage inventory</string>
    <string name="instructions_text">Add a new shoe style by using the \"+\" fab. \n\nTo edit an existing style, tap on the entry from the list.</string>
    <string name="empty_shoe_list_text">No shoes in stock</string>
    <string name="shoe_list_title">Current inventory</string>
    <string name="fab_content_descrip">Add new shoe entry to inventory</string>
    <string name="item_logout">Logout</string>
    <string name="add_shoe_title">Add new inventory</string>
    <string name="shoe_name">Shoe name</string>
    <string name="shoe_company">Company</string>
    <string name="shoe_size">Shoe size</string>
    <string name="shoe_description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error_empty_name">Shoe name is required</string>
    <string name="error_empty_company">Company is required</string>
    <string name="error_empty_size">Shoe size is required</string>
    <string name="error_size_not_number">Shoe size should be a number</string>
    <string name="size_format">Size: %.1f</string>
    <string name="shoe_thumbnail_description">a pair of shoes</string>
</resources>
