<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/small"
        android:paddingTop="@dimen/medium"
        android:paddingEnd="@dimen/small"
        android:paddingBottom="@dimen/medium"
        tools:context=".ShoeDetailFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoe_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Atletico" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_company_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:hint="@string/shoe_company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_name_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoe_company_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/xsmall"
                tools:text="Ralph Lauren" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_size_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:hint="@string/shoe_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_company_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoe_size_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/xsmall"
                tools:text="11" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_description_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_size_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoe_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/xsmall"
                android:hint="@string/shoe_description"
                android:inputType="textMultiLine"
                android:text="This shoe is the greatest shoe to ever grace God's green earth. One day, all people everywhere will where this shoe. Be the first. Be a trendsetter!" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>